# A2O_2015

./: .gitignore  Readme.txt  changelog.txt  licence.txt
src/aadcBase/src/jury/AADC_JuryModule_ConnectionLib/: CMakeLists.txt  cJuryModule.cpp  cJuryModule.h  coder_description.h  jury_module.ui  main.cpp  stdafx.cpp  stdafx.h
src/aadcUser/: CMakeLists.txt
src/aadcUser/include/: template_data.h
src/aadcUser/src/HSOG_Runtime/: .clang-format  .gitignore  CMakeLists.txt
src/aadcUser/src/HSOG_Runtime/a2o/: .gitignore  AADCCar.h  CMakeLists.txt
src/aadcUser/src/HSOG_Runtime/a2o/action/: IAction.h  IEffector.h  IManeuverStatusEffector.h  IValueEffector.h
src/aadcUser/src/HSOG_Runtime/a2o/action/impl/: Action.cpp  Action.h  Effector.h  ManeuverStatusEffector.h  ValueEffector.h
src/aadcUser/src/HSOG_Runtime/a2o/carmodel/: IAccelerometer.h  IActuator.h  IAxle.h  ICamera.h  ICarModel.h  IDistanceSensor.h  IGyroscope.h  IIMU.h  ILight.h  IManeuverStatusActuator.h  IMotor.h  IPointCloudSensor.h  ISensor.h  IServoDrive.h  ITachometer.h  IWheel.h
src/aadcUser/src/HSOG_Runtime/a2o/carmodel/impl/: Accelerometer.cpp  Accelerometer.h  Actuator.cpp  Actuator.h  Axle.cpp  Axle.h  Camera.cpp  Camera.h  CarModel.cpp  CarModel.h  DistanceSensor.cpp  DistanceSensor.h  Gyroscope.cpp  Gyroscope.h  IMU.cpp  IMU.h  Light.cpp  Light.h  ManeuverStatusActuator.cpp  ManeuverStatusActuator.h  Motor.cpp  Motor.h  PointCloudSensor.cpp  PointCloudSensor.h  Sensor.cpp  Sensor.h  ServoDrive.cpp  ServoDrive.h  Tachometer.cpp  Tachometer.h  Wheel.cpp  Wheel.h
src/aadcUser/src/HSOG_Runtime/a2o/decision/: IDecisionMaker.h
src/aadcUser/src/HSOG_Runtime/a2o/decision/impl/: AADCDecisionMaker.cpp  AADCDecisionMaker.h  CalibrationDecisionMaker.cpp  CalibrationDecisionMaker.h  DecisionMaker.cpp  DecisionMaker.h
src/aadcUser/src/HSOG_Runtime/a2o/general/: A2ORuntime.cpp  A2ORuntime.h  ComponentFactory.cpp  ComponentFactory.h  IComponentFactory.h  LogComponentFactory.h
src/aadcUser/src/HSOG_Runtime/a2o/maneuver/: IManeuver.h  IManeuverConstants.h
src/aadcUser/src/HSOG_Runtime/a2o/maneuver/impl/: BlindParking.cpp  BlindParking.h  Calibration.cpp  Calibration.h  DriveAudiCircles.cpp  DriveAudiCircles.h  DriveVirtualLane.cpp  DriveVirtualLane.h  DriveWayPoints.cpp  DriveWayPoints.h  DriveWayPointsStraight.cpp  DriveWayPointsStraight.h  FollowLaneManeuver.cpp  FollowLaneManeuver.h  GetReadyManeuver.cpp  GetReadyManeuver.h  HaltManeuver.cpp  HaltManeuver.h  IsReadyManeuver.cpp  IsReadyManeuver.h  JuryStatus.cpp  JuryStatus.h  Maneuver.cpp  Maneuver.h  OneMeter.cpp  OneMeter.h
src/aadcUser/src/HSOG_Runtime/a2o/meta/: IActuatorConfig.h  IAxleConfig.h  ICameraConfig.h  ICarMetaModel.h  IDistanceSensorConfig.h  ISensorConfig.h  IServoDriveConfig.h
src/aadcUser/src/HSOG_Runtime/a2o/meta/impl/: AADCCarMetaModel.cpp  AADCCarMetaModel.h  ActuatorConfig.cpp  ActuatorConfig.h  AxleConfig.cpp  AxleConfig.h  CameraConfig.cpp  CameraConfig.h  CarMetaModel.cpp  CarMetaModel.h  DistanceSensorConfig.cpp  DistanceSensorConfig.h  SensorConfig.cpp  SensorConfig.h  ServoDriveConfig.cpp  ServoDriveConfig.h
src/aadcUser/src/HSOG_Runtime/a2o/perception/: IAccelerometerPerceptor.h  ICameraPerceptor.h  IGyroPerceptor.h  IIMUPerceptor.h  IJuryPerceptor.h  IPerception.h  IPerceptor.h  IPointCloudPerceptor.h  IValuePerceptor.h  IWheelTickPerceptor.h
src/aadcUser/src/HSOG_Runtime/a2o/perception/impl/: AccelerometerPerceptor.h  CameraPerceptor.h  GyroPerceptor.h  IMUPerceptor.h  JuryPerceptor.h  Perception.cpp  Perception.h  Perceptor.h  PointCloudPerceptor.h  ValuePerceptor.h  WheelTickPerceptor.h
src/aadcUser/src/HSOG_Runtime/a2o/utils/concurrency/: BlockingQueue.h  Runnable.h  Stopwatch.h  Worker.h
src/aadcUser/src/HSOG_Runtime/a2o/utils/driveinstructionreader/: DriveInstructionReader.cpp  DriveInstructionReader.h
src/aadcUser/src/HSOG_Runtime/a2o/utils/geometry/: AlignedBoundingBox3D.cpp  AlignedBoundingBox3D.h  Angle.cpp  Angle.h  BoundingBox2D.cpp  BoundingBox2D.h  Circle2D.cpp  Circle2D.h  Cosine.cpp  Cosine.h  Geometry.cpp  Geometry.h  IManeuverGeometry.h  Line2D.cpp  Line2D.h  LineSegment.cpp  LineSegment.h  Path2D.cpp  Path2D.h  Polygon.cpp  (+5 more)
src/aadcUser/src/HSOG_Runtime/a2o/worldmodel/: ICar.h  IDriveInstructionConstants.h  IJuryConstants.h  ILaneDetection.h  ILaneDetectionModel.h  IMovableObject.h  IObjectDetection.h  IRoadSign.h  ISignDetection.h  IThisCar.h  IVisibleObject.h  IWorldModel.h
src/aadcUser/src/HSOG_Runtime/adtf/: BUILD.txt  CMakeLists.txt
src/aadcUser/src/HSOG_Runtime/adtf/common/: framework.h
src/aadcUser/src/HSOG_Runtime/adtf/decoder/: ADTFPinMessageDecoder.cpp  ADTFPinMessageDecoder.h  AccelerometerDecoder.cpp  AccelerometerDecoder.h  CameraDecoder.cpp  CameraDecoder.h  Decoder.cpp  Decoder.h  DepthImageDecoder.cpp  DepthImageDecoder.h  GyroDecoder.cpp  GyroDecoder.h  IMUDecoder.cpp  IMUDecoder.h  InputPin.h  JuryDecoder.cpp  JuryDecoder.h  ValueGroupDecoder.cpp  ValueGroupDecoder.h  WheelTickDecoder.cpp  WheelTickDecoder.h
src/aadcUser/src/HSOG_Runtime/adtf/encoder/: ADTFPinMessageEncoder.cpp  ADTFPinMessageEncoder.h  OutputPin.h
src/aadcUser/src/HSOG_Runtime/adtf/filters/: cameraCalibration.cpp  cameraCalibration.h  rate_limit.cpp  rate_limit.h  runtime_filter.cpp  runtime_filter.h  tsignalvalue_generator.cpp  tsignalvalue_generator.h
src/aadcUser/src/HSOG_Runtime/adtf/maneuverreader/: maneuverreader.h
src/aadcUser/src/HSOG_Runtime/tests/: .gitignore  AngleTest.cpp  CMakeLists.txt  Circle2DTest.cpp  CosineTest.cpp  DriveGeometryTest.cpp  DriveVirtualLaneTest.cpp  GeometryTest.cpp  Line2DTest.cpp  LineDetectorTest.cpp  LineSegmentTest.cpp  LineTest.cpp  Pose2DTest.cpp  Pose3DTest.cpp  ScanLineTest.cpp  SegmentTest.cpp  SteeringAngleOdometryTest.cpp  WheelTickOdometryTest.cpp  WorldModelTest.cpp  test.cpp
src/aadcUser/src/HSOG_Runtime/tools/: CMakeLists.txt  main.cpp
src/aadcUser/src/HSOG_Runtime/tools/tutils/: PanelTransformation.cpp  PanelTransformation.h  RenderUtil.cpp  RenderUtil.h
src/aadcUser/src/HSOG_Runtime/tools/world/: WorldViewer.cpp  WorldViewer.h  resource.qrc
(+183 files in other folders)
